--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,21 +10,21 @@ jobs:
             # Use the same Docker base as the project
             - image: python:3.7.3-stretch
     
-        working_directory: ~/project-ml-microservice-kubernetes
+        working_directory: ~/repo
     
         steps:
             - checkout
-    
             # Download and cache dependencies
             - restore_cache:
                 keys:
-                - v1-dependencies-{{ checksum "requirements.txt" }}
+                - v1-dependencies-{{ checksum "/project-ml-microservice-kubernetes/requirements.txt" }}
                 # fallback to using the latest cache if no exact match is found
                 - v1-dependencies-
     
             - run:
                 name: install dependencies
                 command: |
+                    cd project-ml-microservice-kubernetes
                     python3 -m venv venv
                     . venv/bin/activate
                     make install
@@ -34,11 +34,12 @@ jobs:
             - save_cache:
                 paths:
                     - ./venv
-                key: v1-dependencies-{{ checksum "requirements.txt" }}
+                key: v1-dependencies-{{ checksum "/project-ml-microservice-kubernetes/requirements.txt" }}
                 
             # run lint!
             - run:
                 name: run lint
                 command: |
+                    cd project-ml-microservice-kubernetes
                     . venv/bin/activate
                     make lint 
